<resources>
    <string name="app_name">برنامه ساده ارتباط بین کامپوننت ها</string>
    <string name="username">نام کاربری گیت هاب</string>
    <string name="register_title">ثبت نام</string>
    <string name="password">رمز عبور</string>
    <string name="confrim_password">تکرار رمز عبور</string>
    <string name="choose_country">انتخاب کشور</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="country_must_have_value">کشور باید مقدار داشته باشد</string>
    <string name="country">کشور</string>
    <string name="load_page">باز کدن صفحه وب</string>
    <string name="open_settings">باز کردن تنظیمات</string>
    <string name="open_map">بازکردن نقشه</string>
</resources>