<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="504dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/register_title"
                android:textAlignment="center"
                android:textSize="48dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/username"
                android:textAlignment="center"
                android:textSize="24dp" />

            <EditText
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:hint="@string/username"
                android:textAlignment="center"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/password"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/password"
                android:textAlignment="center"
                android:textSize="24dp" />

            <EditText
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:hint="@string/password"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/confrim_password"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/confrim_password"
                android:textAlignment="center"
                android:textSize="24dp" />

            <EditText
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:hint="@string/password"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/choose_country"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:text="@string/choose_country"/>
                <Button
                    android:id="@+id/register"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:text="@string/register_title"
                    android:enabled="false"/>
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>